# LineDetection

./: aoi_func.m  aoi_func.m~  curve_detect_demo.m  curve_func.m  rotateAround.m
cpp/: CMakeLists.txt  curve_detect.cpp  curve_detect.h  curve_detect_app.cpp
matlab/: aoi_func.m  curve_detect_demo.m  deg2rad.m  rad2deg.m
